[gd_scene format=3 uid="uid://trcrixg3cpya"]

[ext_resource type="Shader" uid="uid://cclacojgeho5i" path="res://Levels/pause_menu.gdshader" id="1_oda3r"]
[ext_resource type="Script" uid="uid://b7hh4h77ntxto" path="res://Scripts/pause_menu.gd" id="1_pause"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mek05"]
shader = ExtResource("1_oda3r")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_oda3r"]
length = 0.36666667
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nhmly"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mek05"]
_data = {
&"RESET": SubResource("Animation_oda3r"),
&"blur": SubResource("Animation_nhmly")
}

[node name="PauseMenu" type="Control" unique_id=2067490045]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pause")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1929022896]
material = SubResource("ShaderMaterial_mek05")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=2046079772]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 448.0
offset_top = 192.0
offset_right = 704.0
offset_bottom = 448.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer" unique_id=1017366026]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer" unique_id=150324677]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer" unique_id=488537398]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Resume"

[node name="Main Menu" type="Button" parent="PanelContainer/VBoxContainer" unique_id=1188790481]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Main Menu"

[node name="Quit Game" type="Button" parent="PanelContainer/VBoxContainer" unique_id=376248652]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=938819191]
libraries/ = SubResource("AnimationLibrary_mek05")

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
